--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css\main.css">
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <header>
-            <h1 class="bg-effect">Complexity of Ryhmes</h1>
+            <h1 class="bg-effect">Complexity of Rhymes</h1>
         </header>
         <main>
            <section>  
              <h2>Multis</h2>
-             <p>Multi syllable rhymes are difficult<br>like killing a bull youll fizz out typical
+             <p>Multi syllable rhymes are difficult<br>like killing a bull you'll fizz out typical
             </p>
            </section>
            <section>    
