--- a/index.html
+++ b/index.html
@@ -16,26 +16,25 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="container">
-            <header>
-                <h1 class="bg-effect">Complexity of Rhymes</h1>
-            </header>
-            <main class="grid">
+      <div class="container"> 
+            <!-- <header> -->
+                <h1 class="main">Complexity of Rhymes</h1>
+                <h2 class="r">Rhymes</h2>
+                <aside class="a"> 
+                    <div>
+                        <h2>Multis</h2>
+                         <p>Multi syllable rhymes are difficult<br>like killing a bull you'll fizz out typical </p>
+                     </div> 
+                     <div >    
+                       <h2>Inner Rhymes</h2>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sequi facilis eaque incidunt fuga non ipsam consectetur! Vitae obcaecati vel laudantium necessitatibus nostrum amet, officia harum recusandae, veniam, nesciunt consectetur.</p>
                 
-                 <section class="1">  
-                    <h2>Multis</h2>
-                     <p>Multi syllable rhymes are difficult<br>like killing a bull you'll fizz out typical </p>
-                 </section> 
-                 <section class="2">    
-                   <h2>Inner Rhymes</h2>
-                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis sequi facilis eaque incidunt fuga non ipsam consectetur! Vitae obcaecati vel laudantium necessitatibus nostrum amet, officia harum recusandae, veniam, nesciunt consectetur.</p>
-                </section>   
-               <section class="3">
-                   <h2>Rhyming Patterns</h2>
-                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus unde, et necessitatibus nemo architecto exercitationem animi reprehenderit dolorem illo, in natus repudiandae impedit vero rem? Saepe nemo qui optio cumque.</p>
-                </section>
-            
-             </main>   
+                  <div>
+                       <h2>Rhyming Patterns</h2>
+                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus unde, et necessitatibus nemo architecto exercitationem animi reprehenderit dolorem illo, in natus repudiandae impedit vero rem? Saepe nemo qui optio cumque.</p>
+                    </div> 
+                </aside>
+            <!-- </header> -->
         </div>
     <script src="" async defer></script>
     </body>
