--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- <header> -->
                 <h1 class="main">Complexity of Rhymes</h1>
                 
-                <h2 class="r">Rhymes</h2>
+                <h2 class="r vertical-text">Rhymes</h2>
                 <aside class="a"> 
                     <div>
                         <h2>Multis</h2>
