started second section.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
       <div class="container"> 
-            <header>
+            <header class="bg-header">
                 <h1 class="main">Complexity of Rhymes</h1>
-                
                 <h2 class="r">Rhymes</h2>
                 <aside class="a"> 
                     <div>
@@ -37,8 +36,10 @@
                     </div> 
                 </aside>
             </header>
-            <main>
-                
+            <main class="bg-main">
+                <h1>Jcole</h1> 
+                <p>has great story telling ability</p> 
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quidem sapiente quibusdam placeat repudiandae, blanditiis voluptas esse, velit ut quos quae debitis deserunt voluptatum dolorem mollitia enim sit pariatur saepe.</p>       
             </main>
         </div>
     <script src="" async defer></script>
