--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <main class="bg-main">
                 <h1>Jcole</h1> 
                 <p>has great story telling ability</p> 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis quidem sapiente quibusdam placeat repudiandae, blanditiis voluptas esse, velit ut quos quae debitis deserunt voluptatum dolorem mollitia enim sit pariatur saepe.</p>       
+                <p>Lorem sum dolor sit amet consectetur adipisicing elit. Nobis quidem sapiente quibusdam placeat repudiandae, blanditiis voluptas esse, velit ut quos quae debitis deserunt voluptatum dolorem mollitia enim sit pariatur saepe.</p>       
             </main>
         </div>
     <script src="" async defer></script>
